# toy-vector-db

./: .gitignore  CMakeLists.txt  CODE_TOUR.md  DESIGN.md  GLOSSARY.md  README.md
bench/: CMakeLists.txt  recall_harness.cpp
examples/: CMakeLists.txt  rag_demo.cpp
include/toyvdb/: bitset.hpp  blob_store.hpp  crc32.hpp  distance.hpp  engine.hpp  flat_index.hpp  hnsw_index.hpp  index.hpp  log_store.hpp  metadata.hpp  op_codec.hpp  rag.hpp  types.hpp  vector_store.hpp
server/: CMakeLists.txt  server.cpp
server/static/: index.html
src/: blob_store.cpp  engine.cpp  flat_index.cpp  hnsw_index.cpp  log_store.cpp  op_codec.cpp  rag.cpp  vector_store.cpp
tests/: CMakeLists.txt  test_distance.cpp  test_edgecases.cpp  test_flat_index.cpp  test_hnsw.cpp  test_metadata_filter.cpp  test_parallel.cpp  test_persistence.cpp  test_rag.cpp  test_storage_seam.cpp  test_vector_store.cpp
